sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:3: error: not found: value getNombreValeur
  var n = getNombreValeur()
          ^AlgBubbleSort1:12: error: not found: value i
plusPetit(i:Int, j:Int) :Boolean
          ^AlgBubbleSort1:12: error: not found: value j
plusPetit(i:Int, j:Int) :Boolean
                 ^AlgBubbleSort1:13: error: not found: value i
echange(i:Int, j:Int) 
        ^AlgBubbleSort1:13: error: not found: value j
echange(i:Int, j:Int) 
               ^