sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var n = getNombreValeur()
  for (i<- 0 to n-1) {
    if (plusPetit(i,i+1)) {echange(i,1+1)} 
  }
}




plusPetit(i:Int, j:Int) :Boolean
echange(i:Int, j:Int)